# Homework27_Django

./: db.sqlite3  manage.py  pyproject.toml
Homework27_Django/: asgi.py  settings.py  urls.py  wsgi.py
ads/: admin.py  models.py  views.py
ads/data/: ads.csv  utils.py
ads/migrations/: 0001_initial.py  0002_alter_advertisement_id_alter_category_id.py  0003_alter_advertisement_name.py
